네비게이션 바 생성

--- a/app/src/main/res/layout/basic_layout.xml
+++ b/app/src/main/res/layout/basic_layout.xml
@@ -16,7 +16,7 @@
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_menu"
+        android:id="@+id/navigation_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
