--- a/app/src/main/res/layout/itembox.xml
+++ b/app/src/main/res/layout/itembox.xml
@@ -75,6 +75,7 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/sum_button"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/button"
@@ -99,6 +100,7 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/ori_button"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/button"
@@ -111,7 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="요약보기 TTS"
+                android:text="원문보기 TTS"
                 android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
