--- a/app/src/main/res/layout/summary.xml
+++ b/app/src/main/res/layout/summary.xml
@@ -22,17 +22,35 @@
             android:text="back"
             android:textSize="6sp"/>
 
-        <TextView
-            android:id="@+id/sum_title"
+        <LinearLayout
+
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="종목명"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/sumName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="종목명"
+                android:textSize="14sp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/sumId"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="serial number"
+                android:textSize="8sp"/>
+        </LinearLayout>
+
 
         <TextView
+            android:id="@+id/sumTitle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -42,6 +60,7 @@
             android:gravity="center" />
 
         <TextView
+            android:id="@+id/sumBank"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -61,6 +80,7 @@
         android:gravity="center">
 
         <TextView
+            android:id="@+id/sumScript"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="요약문"
