서버 동기화 및 일시정지 버튼 활성화

--- a/app/src/main/res/layout/original.xml
+++ b/app/src/main/res/layout/original.xml
@@ -167,7 +167,7 @@
             android:id="@+id/oriScript"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="원문"
+            android:text="@string/tts_test"
             android:textSize="20sp"
             android:textStyle="bold"
             android:gravity="center" />
