--- a/app/src/main/res/layout/original.xml
+++ b/app/src/main/res/layout/original.xml
@@ -1,16 +1,14 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#F4F4F4">
 
-    <!-- 상단: 종목명, 제목, 증권사 -->
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="3"
+        android:background="@drawable/title_box"
         android:padding="16dp"
         android:layout_alignParentTop="true">
 
@@ -18,57 +16,49 @@
             android:id="@+id/backbutton_ori"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            app:layout_constraintStart_toStartOf="@+id/content_container"
+            app:layout_constraintTop_toTopOf="@+id/content_container"
             android:layout_marginStart="8dp"
-            android:text="back"
-            android:textSize="6sp" />
+            android:background="@drawable/back_button" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:weightSum="4"
-            android:orientation="vertical">
+        <TextView
+            android:id="@+id/oriName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintStart_toEndOf="@id/backbutton_ori"
+            app:layout_constraintTop_toTopOf="@id/content_container"
+            android:text="종목명"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="#34A22C"
+            android:ellipsize="end"
+            android:maxLines="1" />
 
-            <TextView
-                android:id="@+id/oriName"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                android:text="종목명"
-                android:textSize="14sp"
-                android:gravity="center"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/oriId"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="serial number"
-                android:textSize="8sp" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/ori_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@id/content_container"
+            app:layout_constraintBottom_toBottomOf="@+id/content_container"
+            android:text="YYYY/MM/DD"
+            android:textSize="10sp" />
 
         <TextView
             android:id="@+id/oriTitle"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/oriName"
+            app:layout_constraintBottom_toTopOf="@id/ori_date"
+            app:layout_constraintStart_toStartOf="@id/oriName"
             android:text="제목"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:textSize="22sp"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/oriBank"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="증권사"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:gravity="center" />
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 <RelativeLayout
     android:id="@+id/bottom_menu_container"
     android:layout_width="match_parent"
@@ -148,7 +138,6 @@
                 android:background="@null" />
         </LinearLayout>
 
-        <!-- 둥근 손잡이 버튼 -->
 
     </RelativeLayout>
 </RelativeLayout>
