--- a/app/src/main/res/layout/original.xml
+++ b/app/src/main/res/layout/original.xml
@@ -30,7 +30,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/oriName"
+                android:id="@+id/oriCategory"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
