--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,13 +22,17 @@
             android:background="#D9D9D9"/>
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/reportRecycler"
-        android:layout_width="match_parent"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiper"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="8"
-        android:layout_margin="5dp"
-        android:orientation="vertical"/>
+        android:layout_weight="8">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reportRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:orientation="vertical"/>
 
-
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
