--- a/app/src/main/res/layout/itembox.xml
+++ b/app/src/main/res/layout/itembox.xml
@@ -48,8 +48,13 @@
                 android:text="제목"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:ellipsize="end"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:ellipsize = "marquee"
+                android:marqueeRepeatLimit = "marquee_forever"
+                android:singleLine="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:scrollHorizontally="true" />
 
             <TextView
                 android:id="@+id/bank"
