--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,92 +1,64 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
     android:layout_margin="8dp"
     android:background="@color/gray"
     android:layout_marginBottom="12dp"
     android:elevation="10dp">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/stock_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="종목명"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_marginBottom="8dp" />
+        android:text="리포트 제목"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/item_layout"
+        app:layout_constraintStart_toStartOf="@id/item_layout"
+        android:layout_marginLeft="10dp"/>
 
-        <TextView
-            android:id="@+id/serial_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:text="serial number"
-            android:textSize="10sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/item_category"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        android:layout_marginLeft="50dp"
-        android:layout_marginBottom="4dp">
+        android:text="분류"
+        android:textSize="15sp"
+        app:layout_constraintTop_toBottomOf="@id/item_title"
+        app:layout_constraintStart_toStartOf="@id/item_title"
+        android:layout_marginLeft="5dp"/>
 
-        <Button
-            android:id="@+id/summary_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/button"
-            android:layout_margin="3dp"
-            android:text="요약본"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
-        <Button
-            android:id="@+id/original_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/button"
-            android:layout_margin="3dp"
-            android:text="원문"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
-    </LinearLayout>
+    <View
+        android:id="@+id/item_guide_line"
+        android:layout_width="1dp"
+        android:layout_height="15sp"
+        android:background="@color/black"
+        app:layout_constraintStart_toEndOf="@id/item_category"
+        app:layout_constraintTop_toTopOf="@id/item_category"
+        app:layout_constraintBottom_toBottomOf="@id/item_category"
+        android:layout_margin="3sp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/stockName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="50dp">
+        android:text="종목명"
+        android:textSize="15sp"
+        app:layout_constraintStart_toEndOf="@id/item_guide_line"
+        app:layout_constraintTop_toTopOf="@id/item_category"
+        android:layout_marginLeft="3sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="요약보기 TTS"
-            android:textColor="@color/black"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="14sp" />
+    <TextView
+        android:id="@+id/item_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="upload time"
+        android:textSize="13sp"
+        android:textColor="#00027B"
+        app:layout_constraintBottom_toBottomOf="@id/item_layout"
+        app:layout_constraintEnd_toEndOf="@id/item_layout"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="요약보기 TTS"
-            android:textColor="@color/black"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="14sp" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
