--- a/app/src/main/res/layout/itembox.xml
+++ b/app/src/main/res/layout/itembox.xml
@@ -5,23 +5,23 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
-    android:background="#D9D9D9"
+    android:background="@drawable/box"
     android:orientation="vertical"
     android:elevation="10dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/title_box"
         android:layout_margin="10dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/title_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:background="#F5F5F5">
 
             <TextView
                 android:id="@+id/stockName"
@@ -68,6 +68,16 @@
                 android:text="증권사"
                 android:textSize="15sp" />
 
+
+            <ImageButton
+                android:id="@+id/star_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/star"
+                app:layout_constraintEnd_toEndOf="@+id/date"
+                android:background="?attr/selectableItemBackground" />
+
+
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
@@ -96,7 +106,7 @@
 
     <TextView
         android:id="@+id/script"
-        android:layout_width="match_parent"
+        android:layout_width="340dp"
         android:layout_height="150dp"
         android:layout_margin="10dp"
         android:background="#ffffff"
@@ -105,62 +115,66 @@
         android:text="script" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/sum_button"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/round_button"
-                android:elevation="30dp"
-                android:gravity="center"
-                android:text="요약본"
-                android:textSize="20sp" />
-
-            <TextView
+            <View
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="요약보기 TTS"
-                android:textSize="15sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+                android:layout_height="10dp"
+                android:gravity="center"/>
 
             <Button
                 android:id="@+id/ori_button"
-                android:layout_width="120dp"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/round_button"
+                android:src="@drawable/ori_button"
                 android:elevation="30dp"
                 android:gravity="center"
-                android:text="원문"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:background="@drawable/ori_button"/>
 
-            <TextView
+            <View
                 android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginLeft="-30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="10dp"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/sum_button"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:src="@drawable/sum_button"
+                android:elevation="30dp"
                 android:gravity="center"
-                android:text="원문보기 TTS"
-                android:textSize="15sp" />
+                android:textSize="20sp"
+                android:background="@drawable/sum_button"/>
+
         </LinearLayout>
     </LinearLayout>
+
 
 
 </LinearLayout>
